# unispec

./: .gitignore  Cargo.toml  README.md
assets/ui/: explorer_window.slint  explorer_window_controls.slint  inspector.slint  spec.slint  spec_main_window.slint  spec_sub_main_window.slint  windows.slint
output/: session_21_4_2024.xlsx  session_7_5_2024.xlsx
src/: build.rs  data_processing.rs  file_loader.rs  main.rs  peak.rs  roi.rs  sigma.rs  spec.rs
