[package]
name = "unispec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
ark-poly = "0.4.2"
ark-ff = "0.4.2"
ark-bls12-381 = "0.4.0"
varpro = "0.8.0"
rfd = "0.14.1"
thiserror = "1.0.58"
plotly = { version = "0.8.4", features = ["kaleido"] }
chrono = "0.4.37"
rust_xlsxwriter = "0.64.2"
